--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,6 +4,10 @@
       <div class="rounded shadow p-3">
         <%= simple_form_for @list do |f| %>
           <%= f.input :name, placeholder: 'Classic' %>
+          <%= f.input :photo,
+            as: :file,
+            label: ("List Photo"),
+            input_html: { autocomplete: "photo"} %>
           <%= f.submit class: 'btn btn-primary' %>
         <% end %>
       </div>
