Added banner style

--- a/app/views/lists/_homepage-banner.html.erb
+++ b/app/views/lists/_homepage-banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: url(<%= asset_path('banner.jpeg') %>)">
+<div class="banner" style="background-image: url(<%= asset_path('banner1.jpeg') %>)">
   <h1>Save any kind of movies</h1>
-  <%= link_to 'Create a movie list', new_list_path, class: 'btn btn-primary' %>
+  <p><%= link_to 'Create a movie list', new_list_path, class: 'btn btn-primary' %></p>
 </div>
