--- a/app/assets/stylesheets/components/_homepage-banner.scss
+++ b/app/assets/stylesheets/components/_homepage-banner.scss
@@ -1,35 +1,25 @@
-main {
+.banner{
   background: #ccc;
-  background: url('assets/banner.jpeg') no-repeat center center;
   background-size: cover;
-  // box-shadow:
-    // inset 0 0 100vw 100vw rgba(0,0,0,0.3),0 16px 8px -8px rgba(0, 0, 0, 0.4);
+  background-repeat: no-repeat;
   min-height: calc(100vh - 32px);
   width: 100vw;
   padding: 0 0 32px;
-  display: flex;
-}
-
-.card__text-lg {
-  color: #fff;
-  font-size: 18px;
-  font-weight: 300;
-  text-transform: uppercase;
-  line-height: 1.2;
-  width: 100%;
-  margin: 0;
-}
-.card-lg__container {
+  background-position: center;
   padding: 0 16px 40px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-
-  .card__text-lg {
+  // display: flex;
+  h1{
+    color: #fff;
     font-size: 40px;
     font-weight: 400;
     letter-spacing: 1.4px;
+    line-height: 1.2;
+    width: 100%;
+    margin: 0;
   }
-
 }
+
 
