--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <div class="rounded shadow p-3">
+      <div class="rounded shadow p-3 m-5">
         <%= simple_form_for @list do |f| %>
           <%= f.input :name, placeholder: 'Classic' %>
           <%= f.input :photo,
