--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -11,6 +11,7 @@
           <%= f.submit class: 'btn btn-primary' %>
         <% end %>
       </div>
+      <%= link_to "Back", root_path %>
     </div>
   </div>
 </div>
