--- a/app/assets/stylesheets/components/_homepage-banner.scss
+++ b/app/assets/stylesheets/components/_homepage-banner.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  // display: flex;
+  text-align: center;
   h1{
     color: #fff;
     font-size: 40px;
