--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,7 @@
 .scrolling-wrapper {
   //only for visual
   width: 100%;
-  margin: 20px auto;
+  margin: 0 auto;
   background: black;
   //---------------
   overflow-x: scroll;
@@ -14,8 +14,8 @@
   .m-card {
     display: inline-block;
     //my css card below
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 420px;
     background: black;
     border: 8px solid black;
     h3{
@@ -23,7 +23,11 @@
     }
   }
 }
-
+.mylist-img{
+  height: 400px;
+  width: 350px;
+  filter: grayscale(90%);
+}
 .movie-cards {
   display: grid;
   grid-template-columns: 1fr 1fr;
