--- a/app/views/lists/_homepage-banner.html.erb
+++ b/app/views/lists/_homepage-banner.html.erb
@@ -1,4 +1,69 @@
-<div class="banner" style="background-image: url(<%= asset_path('banner1.jpeg') %>)">
-  <h1>Save any kind of movies</h1>
-  <p><%= link_to 'Create a movie list', new_list_path, class: 'btn btn-primary' %></p>
+<div class="untitled">
+  <div class="untitled__slides">
+    <div class="untitled__slide">
+      <div class="untitled__slideBg"></div>
+      <div class="untitled__slideContent">
+        <span>Fight</span>
+        <span>Club</span>
+        <p>Save any kind of movies</p>
+        <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
+        <%= link_to "My Lists", "#", class: 'button' %>
+      </div>
+    </div>
+    <div class="untitled__slide">
+      <div class="untitled__slideBg"></div>
+      <div class="untitled__slideContent">
+        <span>La La</span>
+        <span>Land</span>
+        <p>Save any kind of movies</p>
+        <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
+        <%= link_to "My Lists", "#", class: 'button' %>
+      </div>
+    </div>
+    <div class="untitled__slide">
+      <div class="untitled__slideBg"></div>
+      <div class="untitled__slideContent">
+        <span>Jojo</span>
+        <span>Rabbits</span>
+        <p>Save any kind of movies</p>
+        <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
+        <%= link_to "My Lists", "#", class: 'button' %>
+
+      </div>
+    </div>
+    <div class="untitled__slide">
+      <div class="untitled__slideBg"></div>
+      <div class="untitled__slideContent">
+        <span>Before</span>
+        <span>Sunrise</span>
+        <p>Save any kind of movies</p>
+        <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
+        <%= link_to "My Lists", "#", class: 'button' %>
+
+      </div>
+    </div>
+    <div class="untitled__slide">
+      <div class="untitled__slideBg"></div>
+      <div class="untitled__slideContent">
+        <span>Spirited</span>
+        <span>Away</span>
+        <p>Save any kind of movies</p>
+        <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
+        <%= link_to "My Lists", "#", class: 'button' %>
+
+      </div>
+    </div>
+    <div class="untitled__slide">
+      <div class="untitled__slideBg"></div>
+      <div class="untitled__slideContent">
+        <span>Call me by</span>
+        <span>your name</span>
+        <p>Save any kind of movies</p>
+        <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
+        <%= link_to "My Lists", "#", class: 'button' %>
+      </div>
+    </div>
+  </div>
+  <div class="untitled__shutters"></div>
 </div>
+
