--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,4 +4,7 @@
 @import "navbar";
 @import "homepage-banner";
 @import "card";
-@import "btn";
+@import "button";
+@import "index-cards";
+@import "banner";
+@import "body";
