--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #992E0B;
 $blue: #167FFB;
 $yellow: #fbb11e;
 $orange: #E67E22;
@@ -9,3 +9,4 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 $purple: #8a2e8d;
+$lacivert: #182631;
