--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "navbar" %>
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('assets/video.gif');">
   <div class="container">
     <h1 class="header">My Lists</h1>
