--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   top: 0;
   transition: 0.5s background-color ease;
+  justify-content: space-between;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -12,7 +13,7 @@
 }
 .nav-item{
   a{
-    color: white;
+    color: $red;
     &:hover{
       opacity: 0.8;
     }
