--- a/app/views/lists/_navbar.html.erb
+++ b/app/views/lists/_navbar.html.erb
@@ -1,4 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-lewagon">
+  <a class="navbar-brand" href="#">
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,10 +9,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <%= link_to "Home", root_path, class: "nav-link" %>
+        <strong><%= link_to "Home", root_path, class: "nav-link" %></strong>
       </li>
       <li class="nav-item">
-        <%= link_to "My List", "#", class: "nav-link" %>
+        <strong><%= link_to "My List", "#", class: "nav-link" %></strong>
       </li>
       <li class="nav-item">
         <%= link_to "", "#", class: "nav-link" %>
