--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -19,6 +19,6 @@
       </div>
       <div>
     </div>
-    <%= link_to "Back", root_path %>
+    <%= link_to "Back", lists_path %>
   </div>
 </div>
