--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,13 @@
 .footer {
   background: $lacivert;
-  box-shadow: 0 0 15px (0,0,0,0.8);
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 100px;
-  padding: 0px 50px;
+  height: 70px;
+  font-size: 12px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  width: 100%;
+  bottom:0;
   color: rgba(0,0,0,0.3);
 }
 .footer-links {
@@ -13,7 +15,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: $red;
+  color: white;
   opacity: 0.30;
   text-decoration: none;
   font-size: 24px;
@@ -23,3 +25,6 @@
   opacity: 1;
 }
 
+.footer-margin{
+  margin-top: 90px;
+}
