--- a/app/views/lists/_navbar.html.erb
+++ b/app/views/lists/_navbar.html.erb
@@ -9,13 +9,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <strong><%= link_to "Home", root_path, class: "nav-link" %></strong>
-      </li>
-      <li class="nav-item">
-        <strong><%= link_to "My List", "#", class: "nav-link" %></strong>
-      </li>
-      <li class="nav-item">
-        <%= link_to "", "#", class: "nav-link" %>
+        <h4><%= link_to "Home", root_path, class: "nav-link" %></h4>
       </li>
     </ul>
   </div>
