--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,17 +1,17 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <div class="rounded shadow p-3 m-5">
+      <div class="reg-card rounded shadow p-5 m-5">
         <%= simple_form_for @list do |f| %>
           <%= f.input :name, placeholder: 'Classic' %>
           <%= f.input :photo,
             as: :file,
             label: ("List Photo"),
             input_html: { autocomplete: "photo"} %>
-          <%= f.submit class: 'btn btn-primary' %>
+          <%= f.submit class: 'button' %>
         <% end %>
       </div>
-      <%= link_to "Back", root_path %>
+      <%= link_to "Back", root_path, class: 'button' %>
     </div>
   </div>
 </div>
