Added movie rating

--- a/app/assets/stylesheets/components/_index-cards.scss
+++ b/app/assets/stylesheets/components/_index-cards.scss
@@ -91,6 +91,9 @@ body{
   filter: grayscale(80%);
 }
 
+.star-yellow{
+  color: $yellow;
+}
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
