--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,8 @@
           <span>Fight</span>
           <span>Club</span>
           <p>Save any kind of movies</p>
-          <%= link_to "Add a new movmylistie list", new_list_path, class: 'button' %>
-          <%= link_to "My Lists", lists_path, class: 'button' %>
+          <%= link_to "Add a new movmylistie list", new_list_path, class: 'button h-button-margin' %>
+          <%= link_to "My Lists", lists_path, class: 'button h-button-margin' %>
         </div>
       </div>
       <div class="untitled__slide">
@@ -17,8 +17,8 @@
           <span>La La</span>
           <span>Land</span>
           <p>Save any kind of movies</p>
-          <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
-          <%= link_to "My Lists", lists_path, class: 'button' %>
+          <%= link_to "Add a new movie list", new_list_path, class: 'button h-button-margin' %>
+          <%= link_to "My Lists", lists_path, class: 'button h-button-margin' %>
         </div>
       </div>
       <div class="untitled__slide">
@@ -27,8 +27,8 @@
           <span>Jojo</span>
           <span>Rabbits</span>
           <p>Save any kind of movies</p>
-          <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
-          <%= link_to "My Lists", lists_path, class: 'button' %>
+          <%= link_to "Add a new movie list", new_list_path, class: 'button h-button-margin' %>
+          <%= link_to "My Lists", lists_path, class: 'button h-button-margin' %>
 
         </div>
       </div>
@@ -38,8 +38,8 @@
           <span>Before</span>
           <span>Sunrise</span>
           <p>Save any kind of movies</p>
-          <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
-          <%= link_to "My Lists", lists_path, class: 'button' %>
+          <%= link_to "Add a new movie list", new_list_path, class: 'button h-button-margin' %>
+          <%= link_to "My Lists", lists_path, class: 'button h-button-margin' %>
 
         </div>
       </div>
@@ -49,8 +49,8 @@
           <span>Spirited</span>
           <span>Away</span>
           <p>Save any kind of movies</p>
-          <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
-          <%= link_to "My Lists", lists_path, class: 'button' %>
+          <%= link_to "Add a new movie list", new_list_path, class: 'button h-button-margin' %>
+          <%= link_to "My Lists", lists_path, class: 'button h-button-margin' %>
 
         </div>
       </div>
@@ -60,8 +60,8 @@
           <span>Call me by</span>
           <span>your name</span>
           <p>Save any kind of movies</p>
-          <%= link_to "Add a new movie list", new_list_path, class: 'button' %>
-          <%= link_to "My Lists", lists_path, class: 'button' %>
+          <%= link_to "Add a new movie list", new_list_path, class: 'button h-button-margin' %>
+          <%= link_to "My Lists", lists_path, class: 'button h-button-margin' %>
         </div>
       </div>
     </div>
