--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
           <span>Fight</span>
           <span>Club</span>
           <p>Save any kind of movies</p>
-          <%= link_to "Add a new movmylistie list", new_list_path, class: 'button h-button-margin' %>
+          <%= link_to "Add a new movie list", new_list_path, class: 'button h-button-margin' %>
           <%= link_to "My Lists", lists_path, class: 'button h-button-margin' %>
         </div>
       </div>
